# unix

./: CMakeLists.txt  main.c
include/: buf.h  conf.h  file.h  filsys.h  inode.h  param.h  proc.h  reg.h  seg.h  systm.h  user.h
src/: alloc.c  alloc.h  asmcalls.h  bio.c  bio.h  clock.c  clock.h  fio.c  fio.h  iget.c  iget.h  malloc.c  malloc.h  maths.h  nami.c  nami.h  pipe.c  pipe.h  prf.c  prf.h  rdwri.c  rdwri.h  sig.c  sig.h  slp.h  subr.h  sys1.h
